# arkui_ui_lite

./: BUILD.gn  bundle.json  ui.gni
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
ext/home_host/: BUILD.gn
ext/ide/: BUILD.gn
ext/updater/: BUILD.gn
frameworks/common/: graphic_startup.cpp  image.cpp  screen.cpp  spannable_string.cpp  text.cpp  typed_text.cpp  typed_text.h
frameworks/common/qrcodegen/: qrcode_generator.cpp  qrcode_item.cpp  qrcode_mask.cpp  qrcode_rscode.cpp  qrcode_stream.cpp  qrcode_string.cpp  qrcode_version.cpp
frameworks/components/: root_view.cpp  ui_arc_label.cpp  ui_canvas.cpp  ui_chart.cpp  ui_edit_text.cpp  ui_image_animator.cpp  ui_image_view.cpp  ui_label.cpp  ui_label_button.cpp  ui_list.cpp  ui_qrcode.cpp  ui_scroll_view.cpp  ui_swipe_view.cpp  ui_toggle_button.cpp  ui_view.cpp  ui_view_group.cpp
frameworks/core/: input_method_manager.cpp  render_manager.cpp
frameworks/dock/: focus_manager.cpp  rotate_input_device.cpp  rotate_manager.cpp
frameworks/draw/: draw_label.cpp  draw_label.h  draw_utils.cpp  draw_utils.h
frameworks/engines/gfx/: soft_engine.cpp
frameworks/font/: glyphs_file.cpp  ui_font.cpp  ui_font_adaptor.cpp  ui_font_adaptor.h  ui_font_allocator.cpp  ui_font_bitmap.cpp  ui_font_cache.cpp  ui_font_cache.h  ui_font_cache_manager.h  ui_font_vector.cpp  ui_line_break.cpp  ui_line_break.h  ui_multi_font_manager.cpp
frameworks/imgdecode/: image_load.h
frameworks/path/: path_base.cpp
interfaces/innerkits/common/: input_method_manager.h
interfaces/innerkits/common/qrcodegen/: qrcode_generator.h  qrcode_inner.h  qrcode_version.h
interfaces/innerkits/dock/: focus_manager.h  rotate_event_listener.h  rotate_input_device.h  rotate_manager.h
interfaces/innerkits/engines/gfx/: gfx_engine_manager.h  soft_engine.h
interfaces/innerkits/font/: ui_font_vector.h
interfaces/innerkits/path/: path_base.h
interfaces/kits/common/: screen.h  spannable_string.h  text.h
interfaces/kits/components/: ui_arc_label.h  ui_canvas.h  ui_chart.h  ui_edit_text.h  ui_image_animator.h  ui_label.h  ui_label_button.h  ui_qrcode.h  ui_view.h
interfaces/kits/events/: rotate_event.h
interfaces/kits/font/: ui_font_header.h
interfaces/kits/layout/: flex_layout.h
test/framework/: BUILD.gn
test/framework/src/: test_case_list_adapter.cpp  ui_test_group.cpp
test/uitest/test_edit_text/: custom_input_method.cpp
test/uitest/test_font/: ui_test_font.cpp
test/uitest/test_spannable_string/: ui_test_spannnable_string.cpp
test/uitest/test_vector_font/: ui_test_vector_font.cpp
test/unittest/: BUILD.gn
test/unittest/common/: text_unit_test.cpp
test/unittest/components/: ui_abstract_progress_unit_test.cpp  ui_label_unit_test.cpp  ui_view_group_unit_test.cpp
tools/qt/simulator/autotest/: auto_test.pro
tools/qt/simulator/libui/: libui.pro
tools/qt/simulator/test/: test.pro
tools/qt/simulator/uitest/: UITest.pro
