# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (os_level == "standard") {
  import("//build/ohos.gni")
  import("//foundation/arkui/ui_lite/ui.gni")

  config("libhome_host_layout_header_files") {
    visibility = [ ":*" ]
    include_dirs = arkui_ui_lite_include_dirs
    include_dirs += [
      "//foundation/arkui/ui_lite/frameworks",
      "//foundation/graphic/graphic_utils_lite/interfaces/innerkits",
      "//foundation/graphic/graphic_utils_lite/interfaces/kits",  
    ]
  }

  ohos_shared_library("libhome_host_layout") {
    defines = [
      "__LITEOS_M__",
      "ENABLE_BITMAP_FONT = 0",
      "ENABLE_ICU = 0",
      "ENABLE_JPEG = 1",
      "ENABLE_PNG = 1",
      "ENABLE_MULTI_FONT = 0",
      "ENABLE_SHAPING = 0",
      "ENABLE_STATIC_FONT = 0",
      "ENABLE_VECTOR_FONT = 1",
    ]

    sources = arkui_ui_lite_sources
    sources += [
      "//foundation/graphic/graphic_utils_lite/frameworks/color.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/common/paint.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/depiction/depict_curve.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/rasterizer/rasterizer_cells_antialias.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/rasterizer/rasterizer_scanline_antialias.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/rasterizer/rasterizer_scanline_clip.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/vertexgenerate/vertex_generate_dash.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/vertexgenerate/vertex_generate_stroke.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/vertexprimitive/geometry_arc.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/vertexprimitive/geometry_bezier_arc.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/vertexprimitive/geometry_curves.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/diagram/vertexprimitive/geometry_shorten_path.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/geometry2d.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/graphic_math.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/graphic_performance.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/hal_cpu.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/hal_tick.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/mem_api.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/pixel_format_utils.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/style.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/trans_affine.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/transform.cpp",
      "//foundation/graphic/graphic_utils_lite/frameworks/version.cpp",
    ]
    include_dirs = arkui_ui_lite_include_dirs
    include_dirs += [
      "//foundation/arkui/ui_lite/frameworks",
      "//foundation/graphic/graphic_utils_lite/interfaces/innerkits",
      "//foundation/graphic/graphic_utils_lite/interfaces/kits",  
    ]

    public_configs = [ ":libhome_host_layout_header_files" ]

    deps = [
      "//third_party/bounds_checking_function:libsec_static",
      "//third_party/freetype:freetype_static",
      "//third_party/qrcodegen:qrcodegen_static",
      "//third_party/cJSON:cjson_static",
      "//third_party/libjpeg-turbo:turbojpeg_static",
      "//third_party/libpng:libpng",
    ]

    part_name = "ui_lite"
    subsystem_name = "arkui"
  }
} else {
  group("libhome_host_layout") {
  }
}
